# check_zpool_status

./: CHANGELOG.md  CLAUDE.md  README.md  concept.md  pyproject.toml
scripts/: clean.py  test.py
src/bitranox_template_cli_app_config_log/: __init__conf__.py  __main__.py  cli.py  config.py  config_deploy.py  config_show.py  defaultconfig.toml  logging_setup.py
src/check_zpool_status/: __init__conf__.py  __main__.py  cli.py
tests/: test_behaviors.py  test_cli.py  test_module_entry.py  test_scripts.py
