[project]
name = "bitranox_template_cli_app_config_log"
version = "1.0.0"
description = "Template CLI application with configuration management and structured logging"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich-click>=1.9.4",
    "lib_cli_exit_tools>=2.1.0",
    "lib_log_rich>=5.3.1",
    "lib_layered_config>=3.0.0",
]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["cli", "template", "config", "logging", "layered-config", "rich-click"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/bitranox/bitranox_template_cli_app_config_log"
Repository = "https://github.com/bitranox/bitranox_template_cli_app_config_log.git"
Issues = "https://github.com/bitranox/bitranox_template_cli_app_config_log/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.4",
  "pyright>=1.1.406",
  "bandit>=1.8.6",
  "build>=1.3.0",
  "twine>=6.2.0",
  "codecov-cli>=11.2.5",
  "pip-audit>=2.9.0",
  "textual>=6.6.0",
  "import-linter>=2.6"
]

[project.scripts]
bitranox_template_cli_app_config_log = "bitranox_template_cli_app_config_log.cli:main"
bitranox-template-cli-app-config-log = "bitranox_template_cli_app_config_log.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["src/bitranox_template_cli_app_config_log"]
include = ["src/bitranox_template_cli_app_config_log/py.typed", "src/bitranox_template_cli_app_config_log/defaultconfig.toml"]

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
# ignore the "unused import sys" in the jupyter notebook - which we need (it is a linter hickup)
"notebooks/*.ipynb" = ["F401"]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [
  "src",
]
exclude = [
  "scripts/menu.py",
]

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
pythonpath = ["src"]
markers = [
  "os_agnostic: test runs on every supported operating system",
  "os_windows: test exercises Windows-only behavior",
  "os_macos: test exercises macOS-only behavior",
  "os_posix: test exercises behavior requiring POSIX semantics",
  "os_linux: test exercises Linux-only behavior",
]

[tool.coverage.run]
branch = true
parallel = false
data_file = ".coverage.unit"
source = ["src/bitranox_template_cli_app_config_log"]

[tool.coverage.report]
omit = [
  "tests/*",
]
fail_under = 85
show_missing = true

[tool.importlinter]
root_package = "bitranox_template_cli_app_config_log"

[[tool.importlinter.contracts]]
name = "CLI depends on behaviors only"
type = "layers"
layers = [
  "bitranox_template_cli_app_config_log.cli",
  "bitranox_template_cli_app_config_log.behaviors",
]
